--- a/app/src/main/res/layout/fragment_me_edit.xml
+++ b/app/src/main/res/layout/fragment_me_edit.xml
@@ -38,6 +38,7 @@
                     android:id="@+id/age"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="@={`` + viewModel.userAge}"
                     android:inputType="number"/>
             </com.google.android.material.textfield.TextInputLayout>
 
