Implemented User history database part

--- a/app/src/main/res/layout/fragment_food_data.xml
+++ b/app/src/main/res/layout/fragment_food_data.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="hochschule.de.bachelorthesis.view_model.activities.FoodInfoViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.fragments.FoodInfoViewModel" />
     </data>
 
 
