--- a/app/src/main/res/layout/fragment_food_measurements.xml
+++ b/app/src/main/res/layout/fragment_food_measurements.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="viewModel"
-            type="hochschule.de.bachelorthesis.view_model.activities.FoodInfoViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.fragments.FoodInfoViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
